Fix screen width overlap

--- a/static/styles.css
+++ b/static/styles.css
@@ -14,7 +14,6 @@ body
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
-    min-width: 100vw;
 }
 
 a
@@ -132,7 +131,7 @@ select
 {
     background-color: #78C2AD;
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 5rem;
     flex-shrink: 0;
     align-items: center;
